--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,9 +1,9 @@
 <div class="room-detail">
   <div class="room-image">
     <% if @room.image.attached? %>
-      <%= image_tag @room.image %>
+      <%= image_tag @room.image.variant(resize: "500x500"), class: "room-preview-image" %>
     <% else %>
-      <%= image_tag 'hotel.png' %>
+      <%= image_tag 'hotel.png', class: "room-preview-image" %>
     <% end %>
   </div>
 
@@ -13,14 +13,25 @@
     <p><%= @room.detail %></p>
     <p>料金: <%= number_to_currency(@room.price, unit: '￥', delimiter: ',', precision: 0, format: '%u%n~') %></p>
 
+    <!-- エラーメッセージの表示 -->
+    <% if @reservation.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@reservation.errors.count, "error") %> prohibited this reservation from being saved:</h2>
+      <ul>
+      <% @reservation.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
     <!-- 予約関連の入力フォーム -->
-    <%= form_with model: [@room, @reservation], url: confirm_room_reservations_path(@room), method: :post, local: true do |form| %>
+    <%= form_with model: [@room, @reservation], url: room_reservations_path(@room), local: true do |form| %>
       <div class="reservation-fields">
         <p>チェックイン <%= form.date_field :check_in %></p>
         <p>チェックアウト <%= form.date_field :check_out %></p>
         <p>人数 <%= form.number_field :number_of_people, in: 1..10, step: 1 %></p>
       </div>
-
       <%= form.submit "予約する", class: "btn btn-primary" %>
     <% end %>
 
