--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,10 +7,11 @@
     <div class="dropdown">
       <button class="dropbtn"><%= current_user.name %></button>
         <div class="dropdown-content">
-          <%= link_to '施設の新規登録', new_room_path %>
-
-          <%= link_to 'アカウント設定', edit_user_registration_path %>
-          <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
+        <%= link_to '施設の新規登録', new_room_path %>
+        <%= link_to '予約済み一覧', user_reservations_path %>
+        <%= link_to '登録済み一覧', rooms_path %>
+        <%= link_to 'アカウント設定', edit_user_registration_path %>
+        <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
         </div>
       </div>
     <% else %>
