--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,7 @@
     <div class="search-area">
       <%= form_with url: search_rooms_path, method: :get, local: true do |form| %>
         <%= form.text_field :area, placeholder: "エリア名を入力", class: "search-input" %>
+        <%= form.text_field :keyword, placeholder: "キーワード名を入力" %>
         <%= form.submit "検索", class: "search-button" %>
       <% end %>
     </div>
