--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -26,7 +26,7 @@
         <td><%= room.created_at.strftime('%Y/%m/%d') %></td>
         <td>
           <%= link_to '編集', edit_room_path(room), class: 'btn btn-primary' %>
-          <%= link_to '削除', room, method: :delete, data: { confirm: '本当に削除しますか？' }, class: 'btn btn-danger' %>
+          <%= button_to '削除', room_path(room), method: :delete, form: { class: 'd-inline' }, class: 'btn btn-danger' %>
         </td>
       </tr>
     <% end %>
