--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -22,7 +22,7 @@
         <% end %></td>
         <td><%= link_to room.name, room %></td>
         <td><%= room.detail %></td>
-        <td><%= number_to_currency(room.price, unit: '円', format: '%n%u/日') %></td>
+        <td><%= number_to_currency(room.price, unit: '円', format: '%n%u', precision: 0) %></td>
         <td><%= room.created_at.strftime('%Y/%m/%d') %></td>
         <td>
           <%= link_to '編集', edit_room_path(room), class: 'btn btn-primary' %>
