--- a/app/views/users/edit_profile.html.erb
+++ b/app/views/users/edit_profile.html.erb
@@ -31,5 +31,6 @@
 
   <div class="actions">
     <%= f.submit "プロフィールを更新", class: "btn btn-primary" %>
+    <%= button_tag "キャンセル", type: "button", class: "btn btn-secondary", onclick: "history.back();" %>
   </div>
 <% end %>
