--- a/app/views/reservations/confirm_new.html.erb
+++ b/app/views/reservations/confirm_new.html.erb
@@ -7,7 +7,7 @@
 <p>人数: <%= @reservation.number_of_people %></p>
 
 <% @total_price = @nights * @reservation.room.price * @reservation.number_of_people %>
-<p><strong>お支払い金額:</strong> <%= number_to_currency(@total_price, unit: '￥', delimiter: ',', precision: 0) %></p>
+<p><strong>お支払い金額:</strong> <%= number_to_currency(@total_price, unit: '￥', format: "%u%n", delimiter: ',', precision: 0) %></p>
 <p>上記の内容で正しければ「確定」ボタンを押してください。</p>
 
 <%= form_with model: [@room, @reservation], url: room_reservations_path(@room), method: :post do |form| %>
